Correct CMakeFile for static linking

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,14 +3,14 @@ set(COMPONENT_ADD_INCLUDEDIRS "")
 
 register_component()
 
-option(STATIC_ONLY true)
-option(SHARED_ONLY false)
+set(STATIC_ONLY ON CACHE BOOL "Build libical static library" FORCE)
+set(ENABLE_GTK_DOC CACHE BOOL "Disable GTK doc for libical" FORCE)
 
-add_subdirectory(../lib/ical)
+add_subdirectory(lib/ical)
 
 # Propagate compile settings to libical
-target_include_directories(libical PRIVATE ${IDF_INCLUDE_DIRECTORIES})
-target_compile_options(libical PRIVATE "${IDF_COMPILE_OPTIONS}")
-target_compile_options(libical PRIVATE "${IDF_CXX_COMPILE_OPTIONS}")
+target_include_directories(ical PRIVATE ${IDF_INCLUDE_DIRECTORIES})
+target_compile_options(ical PRIVATE "${IDF_COMPILE_OPTIONS}")
+target_compile_options(ical PRIVATE "${IDF_CXX_COMPILE_OPTIONS}")
 
-target_link_libraries(${COMPONENT_TARGET} libical)
+target_link_libraries(${COMPONENT_TARGET} ical)
